# CAD_cadseer

./: .gitmodules  CMakeLists.txt  globalutilities.cpp  globalutilities.h  main.cpp  meson.build  meson_options.txt  myBuild.txt  readme.md  resources.qrc
annex/: annbase.cpp  annbase.h  anncsysdragger.cpp  anncsysdragger.h  anninstancemapper.cpp  anninstancemapper.h  annintersectionmapper.cpp  annintersectionmapper.h  annlawfunction.cpp  annlawfunction.h  annseershape.cpp  annseershape.h  annshapeidhelper.cpp  annshapeidhelper.h  annsurfacemesh.cpp  annsurfacemesh.h  base.cpp  base.h  csysdragger.cpp  csysdragger.h  instancemapper.cpp  intersectionmapper.cpp  seershape.cpp  seershape.h  shapeidhelper.h  surfacemesh.cpp  surfacemesh.h
appimage/: cadseer.desktop  deployCommand.txt
application/: appapplication.cpp  appapplication.h  appfactory.cpp  appfactory.h  appincrementwidget.cpp  appincrementwidget.h  appinfowindow.cpp  appinfowindow.h  application.cpp  application.h  appmainwindow.cpp  appmainwindow.h  appmessage.cpp  appmessage.h  factory.cpp  factory.h  incrementwidget.cpp  infowindow.cpp  infowindow.h  mainwindow.cpp  mainwindow.h  splitterdecorated.cpp
cmake/: FindGmsh.cmake  FindOpenCasCade.cmake  FindOsgQt.cmake  FindXSDCXX.cmake  FindXercesC.cmake
command/: base.cpp  blend.cpp  checkgeometry.cpp  checkgeometry.h  cmdbase.cpp  cmdbase.h  cmdblend.cpp  cmdblend.h  cmdboolean.cpp  cmdboolean.h  cmdbox.cpp  cmdbox.h  cmdchamfer.cpp  cmdchamfer.h  cmdcheckgeometry.cpp  cmdcheckgeometry.h  cmdcone.cpp  cmdcone.h  cmdcsysedit.cpp  cmdcsysedit.h  cmdcylinder.cpp  cmdcylinder.h  cmddatumaxis.cpp  cmddatumaxis.h  cmddatumplane.cpp  cmddatumplane.h  cmddatumsystem.cpp  cmddatumsystem.h  cmddieset.cpp  cmddieset.h  cmddirty.cpp  cmddirty.h  cmddissolve.cpp  cmddissolve.h  cmddraft.cpp  cmddraft.h  cmddraggertofeature.cpp  cmddraggertofeature.h  cmdeditcolor.cpp  cmdeditcolor.h  (+167 more)
commandview/: cmvbase.cpp  cmvbase.h  cmvblend.cpp  cmvblend.h  cmvboolean.cpp  cmvboolean.h  cmvchamfer.cpp  cmvchamfer.h  cmvcheckgeometry.cpp  cmvcheckgeometry.h  cmvcsyswidget.cpp  cmvcsyswidget.h  cmvdatumaxis.cpp  cmvdatumaxis.h  cmvdatumplane.cpp  cmvdatumplane.h  cmvdatumsystem.cpp  cmvdatumsystem.h  cmvdraft.cpp  cmvdraft.h  cmvdraglist.cpp  cmvdraglist.h  cmvexpressionedit.cpp  cmvexpressionedit.h  cmvextract.cpp  cmvextract.h  cmvextrude.cpp  cmvextrude.h  cmvface.cpp  cmvface.h  cmvfill.cpp  cmvfill.h  cmvhollow.cpp  cmvhollow.h  cmvlawfunctionwidget.cpp  cmvlawfunctionwidget.h  cmvlawspine.cpp  cmvlawspine.h  cmvmappcurve.cpp  cmvmappcurve.h  (+59 more)
dagview/: dagmodel.cpp  dagmodel.h  dagrectitem.cpp  dagstow.cpp  dagstow.h  dagview.cpp  model.cpp  model.h  stow.h
dialogs/: about.cpp  about.ui  blend.cpp  blend.h  boolean.cpp  checkgeometry.cpp  checkgeometry.h  commitwidget.h  dlgabout.cpp  dlgabout.h  dlgabout.ui  dlgbase.cpp  dlgbase.h  dlgblend.cpp  dlgblend.h  dlgboolean.cpp  dlgboolean.h  dlgbox.cpp  dlgbox.h  dlgchamfer.cpp  dlgchamfer.h  dlgcheckgeometry.cpp  dlgcommitwidget.cpp  dlgcone.cpp  dlgcone.h  dlgcsyswidget.cpp  dlgcsyswidget.h  dlgcylinder.cpp  dlgcylinder.h  dlgdatumsystem.cpp  dlgdatumsystem.h  dlgdraft.cpp  dlgdraft.h  dlgenterfilter.cpp  dlgenterfilter.h  dlgexpressionedit.cpp  dlgexpressionedit.h  dlgextract.cpp  dlgextract.h  dlghollow.cpp  (+63 more)
expressions/: abstractnode.h  edgeproperty.h  exprabstractnode.cpp  exprabstractnode.h  exprformulalink.h  exprgrammar.h  exprgraph.cpp  exprgraph.h  exprmanager.cpp  exprmanager.h  exprstringtranslator.cpp  exprstringtranslatorstow.cpp  exprstringtranslatorstow.h  exprtablemodel.cpp  exprtablemodel.h  exprtableview.cpp  exprtableview.h  exprvalue.h  exprwidget.cpp  exprwidget.h  graph.h  manager.cpp  manager.h  stringtranslatorstow.cpp  tablemodel.cpp  tablemodel.h  tableview.cpp  widget.cpp
feature/: base.cpp  base.h  blend.cpp  blend.h  box.cpp  box.h  chamfer.cpp  chamfer.h  cone.cpp  cone.h  cylinder.cpp  cylinder.h  datumaxis.cpp  datumaxis.h  datumplane.cpp  datumplane.h  dieset.cpp  dieset.h  draft.cpp  draft.h  extract.cpp  extract.h  extrude.cpp  ftrbase.cpp  ftrbase.h  ftrblend.cpp  ftrblend.h  ftrboolean.cpp  ftrboolean.h  ftrbooleanoperation.cpp  ftrbooleanoperation.h  ftrbox.cpp  ftrbox.h  ftrboxbuilder.cpp  ftrchamfer.cpp  ftrchamfer.h  ftrcone.cpp  ftrcone.h  ftrconebuilder.cpp  ftrcylinder.cpp  (+161 more)
gesture/: animations.cpp  animations.h  gesturehandler.cpp  gesturenode.cpp  gesturenode.h  gsnanimations.cpp  gsnhandler.cpp  gsnhandler.h  gsnnode.cpp  gsnnode.h  handler.cpp  handler.h  node.cpp  node.h
law/: lwfadapter.cpp  lwfadapter.h  lwfcue.cpp  lwfcue.h  lwfgraph.h  lwflaw.h  lwfnode.h  lwfvessel.cpp  lwfvessel.h
libreoffice/: lboodshack.cpp
lod/: lodmain.cpp  lodmanager.cpp  lodmanager.h  lodmessage.cpp  manager.cpp  manager.h
menu/: mnumanager.cpp  mnumanager.h  mnuserial.cpp  mnuserial.h  mnuserial.xsd
mesh/: mesh.h  mshconvert.cpp  mshconvert.h  mshfillholescgal.cpp  mshfillholescgal.h  mshfillholespmp.cpp  mshfillholespmp.h  mshmesh.h  mshocct.cpp  mshocct.h  mshparameters.cpp  mshparameters.h  parameters.cpp  parameters.h
message/: message.cpp  message.h  msgmessage.cpp  msgmessage.h  msgnode.cpp  msgnode.h  msgsift.cpp  msgsift.h  msgvariant.h  node.cpp  node.h  sift.cpp  variant.h
modelviz/: datumaxis.cpp  datumaxis.h  mdvbase.cpp  mdvdatumaxis.cpp  mdvdatumaxis.h  mdvdatumplane.cpp  mdvdatumplane.h  mdvdatumsystem.cpp  mdvdatumsystem.h  mdvhiddenlineeffect.cpp  mdvhiddenlinetechnique.cpp  mdvlawfunction.cpp  mdvlawfunction.h  mdvshapegeometry.cpp  mdvshapegeometry.h  mdvshapegeometryprivate.h  mdvsurfacemesh.cpp  mdvsurfacemesh.h  shapegeometry.cpp  surfacemesh.cpp  surfacemesh.h
parameter/: parameter.cpp  parameter.h  prmconstants.h  prmexpressionlink.cpp  prmexpressionlink.h  prmparameter.cpp  prmparameter.h  prmvariant.h  variant.h
preferences/: manager.cpp  preferences.xml  preferencesXML.cpp  preferencesXML.h  preferencesXML.xsd  prfmanager.cpp  prfmanager.h
project/: featureload.cpp  featureload.h  gitmanager.cpp  gitmanager.h  prjfeatureload.cpp  prjfeatureload.h  prjgraph.h  (+12 more)
(+229 files in other folders)
